nenolod     2005/10/16 04:47:12 UTC	(20051016-2915)
  Log:
  Cope with W32API brokenness.

  Changes:	Modified:
  +164 -136	trunk/win32/sysconf.h (File Modified) 


kog         2005/10/16 04:45:08 UTC	(20051016-2913)
  Log:
  memoserv ignore - first installment 
  

  Changes:	Modified:
  +1 -0		trunk/dist/example.userserv.conf (File Modified) 
  +1 -0		trunk/include/common.h (File Modified) 
  +2 -1		trunk/modules/memoserv/Makefile.in (File Modified) 
  +204 -0	trunk/modules/memoserv/ignore.c (File Added) 


nenolod     2005/10/16 04:10:42 UTC	(20051016-2911)
  Log:
  typo fix in Win32 build instructions

  Changes:	Modified:
  +67 -67	trunk/Makefile.win32 (File Modified) 


terminal    2005/10/16 01:45:05 UTC	(20051016-2909)
  Log:
  Removed accidental debug message.

  Changes:	Modified:
  +0 -1		trunk/protocol/unreal.c (File Modified) 


nenolod     2005/10/16 01:35:02 UTC	(20051016-2907)
  Log:
  Really lets don't allow blank metadata. :p
  

  Changes:	Modified:
  +3 -0		trunk/src/node.c (File Modified) 


terminal    2005/10/16 01:31:54 UTC	(20051016-2905)
  Log:
  install atheme.exe binary too

  Changes:	Modified:
  +1 -0		trunk/Makefile.win32 (File Modified) 


terminal    2005/10/16 01:30:22 UTC	(20051016-2903)
  Log:
  another whoops

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/Makefile.win32 (File Modified) 


terminal    2005/10/16 01:26:55 UTC	(20051016-2901)
  Log:
  00pz win32 :)

  Changes:	Modified:
  +4 -0		trunk/dbtool/dbtool.c (File Modified) 


terminal    2005/10/16 01:22:18 UTC	(20051016-2899)
  Log:
  Win32 support! At least it appears to work.
  Worth a note, many global structs have been converted to real typedef definitions and have an extern definition in the header (and are actually declared in atheme.c)

  Changes:	Modified:
  +66 -0	trunk/Makefile.win32 (File Added) 
  +55 -0	trunk/backend/Makefile.win32 (File Added) 
  +5 -0		trunk/backend/flatfile.c (File Modified) 
  +51 -0	trunk/dbtool/Makefile.win32 (File Added) 