@@ -1,3 +1,11 @@
+nenolod     2005/10/16 04:49:49 UTC	(20051016-2917)
+  Log:
+  Cope with W32API brokenness, again.
+
+  Changes:	Modified:
+  +7 -10	trunk/win32/sysconf.h (File Modified) 
+
+
 nenolod     2005/10/16 04:47:12 UTC	(20051016-2915)
   Log:
   Cope with W32API brokenness.
